--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.11.0
 attrs==25.4.0
 Django==5.2.9
+django-environ==0.12.0
 django-filter==25.2
 djangorestframework==3.16.1
 drf-spectacular==0.29.0
@@ -12,5 +13,6 @@ PyYAML==6.0.3
 referencing==0.37.0
 rpds-py==0.30.0
 sqlparse==0.5.4
+typing_extensions==4.15.0
 tzdata==2025.2
 uritemplate==4.2.0
